# aws-securityhub-mcp-server

./: .env.example  .gitignore  AGENTS.md  README.md  SPECIFICATION.md  pyproject.toml
.github/workflows/: test.yml
src/aws_securityhub_mcp_server/: server.py
src/mcp_server/: __init__.py  server.py
tests/: test_server.py
