[project]
name = "aws-securityhub-mcp-server"
version = "0.1.0"
description = "AWS SecurityHub MCP Server using FastMCP"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "kacchan822", email = "hello@kacchan822.dev" }
]

dependencies = [
    "fastmcp>=0.1.0",
    "boto3>=1.40.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "boto3-stubs[securityhub]>=1.40.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
